# action-update-version

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  action.yaml  bootstrap.sh  pyproject.toml
.dependabot/: config.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: checks.yaml  ci.py.docker.opensource.yaml  ci.yaml  dependabot.yaml  release.yaml  sample.yaml  version.yaml
make/: build.Makefile  ci.Makefile  ci.py.Makefile  docker.Makefile  help.Makefile  setup.Makefile  vars.docker.py.Makefile  vars.py.Makefile
src/: action.py
test/: test_action.py
test/__snapshots__/: test_action.ambr
typings/tomlkit/: __init__.pyi  container.pyi  items.pyi  toml_document.pyi
