[tool.poetry]
name = "action-update-version"
version = "0.9.0"
description = "This Github Action automatically updates the versions of your repositories."
authors = ["Flore de Lasteyrie <flore@outcome.co>"]

[tool.poetry.dependencies]
python = "~3.8.6"
commitizen = "^2.6.0"
tomlkit = "0.5.11"

[tool.poetry.dev-dependencies]
outcome-devkit = "^3.3.6"

[tool.docker]
namespace = "outcomeco"

[tool.black]
line-length = 130
include = '\.pyi?$'
# This stops black from rewriting quotes
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.cache
)/
'''

[tool.isort]
skip_glob = "*/.cache/**/*"

[tool.coverage.run]
branch = true
omit = ["*/.pyenv/*", "*/virtualenvs/*", "**/test/*"]

[tool.coverage.report]
fail_under = 100

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.9.0"
tag_format = "v$version"
bump_message = "chore(version): $current_version → $new_version"
version_files = [ "pyproject.toml:version", "action.yaml:image", "README.md:version-badge"]

[build-system]
requires = ["poetry==1.0.10"]
build-backend = "poetry.masonry.api"
