[tool.poetry]
name = "action-update-version"
version = "2.0.3"
description = "This Github Action automatically updates the versions of your repositories."
authors = ["Flore de Lasteyrie <flore@outcome.co>"]

[tool.poetry.dependencies]
python = "^3.8.6"
commitizen = "^2.17.4"
tomlkit = "0.7.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
syrupy = "^1.1.0"
outcome-devkit = "^7.2.0"

[tool.docker]
registry = "docker.io"
repository = "outcomeco"

[tool.black]
line-length = 130
include = '\.pyi?$'
# This stops black from rewriting quotes
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.cache
)/
'''

[tool.isort]
skip_glob = "*/.cache/**/*"
line_length = 130
include_trailing_comma = true
multi_line_output = 3

[tool.coverage.run]
branch = true
data_file = 'coverage/data'
source = ['src']
omit = [
   "test/*"
]
plugins = ["outcome.devkit.env_coverage"]

[tool.coverage.report]
fail_under = 100
skip_empty = true

[tool.coverage.html]
show_contexts = true
directory = 'coverage/html'

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.0.3"
tag_format = "v$version"
bump_message = "chore(version): $current_version → $new_version"
version_files = [ "pyproject.toml:version", "action.yaml:image", "README.md:version-badge"]

[build-system]
requires = ["poetry==1.1.5"]
build-backend = "poetry.masonry.api"
